--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Hello World</h1>
-    <h2>naver</h2>
+    <h2>naver haha</h2>
     <h3>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto
       possimus, aliquam quas explicabo ipsam tenetur.
